--- a/Strings.ko-KR.resx
+++ b/Strings.ko-KR.resx
@@ -1158,6 +1158,9 @@
   <data name="MainWindow_Menu_Import_Web" xml:space="preserve">
     <value>웹으로부터(_W)</value>
   </data>
+  <data name="MainWindow_Menu_Import_DeckString" xml:space="preserve">
+    <value>덱 코드로부터</value>
+  </data>
   <data name="MainWindow_Menu_New" xml:space="preserve">
     <value>새로 만들기(_N)</value>
   </data>
@@ -1512,6 +1515,12 @@
   <data name="Options_Overlay_Opponent_LabelSecretOpacity" xml:space="preserve">
     <value>비밀 불투명도:</value>
   </data>
+    <data name="Options_Overlay_Opponent_Label_Jade" xml:space="preserve">
+    <value>비취 골렘 카운터 보기:</value>
+  </data>
+  <data name="Options_Overlay_Player_Label_Jade" xml:space="preserve">
+    <value>비취 골렘 카운터 보기:</value>
+  </data>
   <data name="Options_Overlay_Player_CheckBox_Attack" xml:space="preserve">
     <value>전장 공격 카운터 보기</value>
   </data>
@@ -1551,7 +1560,7 @@
   <data name="Options_Overlay_Streaming_CheckBox_DisableTransitions" xml:space="preserve">
     <value>카드 불투명도 전환 비활성화 (권장)</value>
   </data>
-  <data name="Options_Overlay_Streaming_CheckBox_Show" xml:space="preserve">
+  <data name="Options_Overlay_Streaming_CheckBox_f" xml:space="preserve">
     <value>캡쳐 가능한 오버레이 창 보기</value>
   </data>
   <data name="Options_Overlay_Streaming_Header" xml:space="preserve">
@@ -2672,5 +2681,92 @@
   </data>
   <data name="Options_Overlay_Streaming_Text2" xml:space="preserve">
     <value>주의: 오버레이의 복제본이 하스스톤 창 앞에 나타날 수 있습니다. 이 경우, 해당 창을 클릭해 주면 가려지게 됩니다.</value>
+  </data>
+  <data name="MainWindow_Header_GlobalDeckStatistics" xml:space="preserve">
+    <value>전세계 통계 - HSReplay.net</value>
+  </data>
+  <data name="MainWindow_Header_MyGames" xml:space="preserve">
+    <value>내 게임</value>
+  </data>
+  <data name="MainWindow_MyGames_HasActiveFilters" xml:space="preserve">
+    <value>필터 활성</value>
+  </data>
+  <data name="DeckCharts_Label_Wins" xml:space="preserve">
+    <value>승:</value>
+  </data>
+  <data name="DeckCharts_Label_Losses" xml:space="preserve">
+    <value>패:</value>
+  </data>
+  <data name="DeckCharts_Label_Winrate" xml:space="preserve">
+    <value>승률</value>
+  </data>
+  <data name="DeckCharts_Replays_Label_Vs" xml:space="preserve">
+    <value>vs.</value>
+  </data>
+  <data name="DeckCharts_Tooltip_Uploaded" xml:space="preserve">
+    <value>업로드 됨</value>
+  </data>
+  <data name="DeckCharts_Label_NoData" xml:space="preserve">
+    <value>데이터 없음.</value>
+  </data>
+  <data name="DeckCharts_Label_PlaySomeGames" xml:space="preserve">
+    <value>Play some games!</value>
+  </data>
+  <data name="HsReplayDeckInfo_Label_Loading" xml:space="preserve">
+    <value>로딩중...</value>
+  </data>
+  <data name="HsReplayDeckInfo_Label_Machtups" xml:space="preserve">
+    <value>매치업</value>
+  </data>
+  <data name="HsReplayDeckInfo_Button_DeckStatistics" xml:space="preserve">
+    <value>덱 통계 / 멀리건 가이드</value>
+  </data>
+  <data name="HsReplayDeckInfo_Label_NoData" xml:space="preserve">
+    <value>선택된 덱에 대한 정보가 부족합니다.</value>
+  </data>
+  <data name="HsReplayDeckInfo_Label_NoSelectedDeck" xml:space="preserve">
+    <value>전세계 데이터를 보려면 HSReplay.net 아이콘이 있는 덱을 선택하세요.</value>
+  </data>
+  <data name="HsReplayDeckInfo_Label_TrendingDecksPre" xml:space="preserve">
+    <value>Want to try something new?</value>
+  </data>
+  <data name="HsReplayDeckInfo_Hyperlink_TrendingDecks" xml:space="preserve">
+    <value>트렌드 덱을 확인해 보세요.</value>
+  </data>
+  <data name="Druid" xml:space="preserve">
+    <value>드루이드</value>
+  </data>
+  <data name="Hunter" xml:space="preserve">
+    <value>사냥꾼</value>
+  </data>
+  <data name="Mage" xml:space="preserve">
+    <value>마법사</value>
+  </data>
+  <data name="Paladin" xml:space="preserve">
+    <value>성기사</value>
+  </data>
+  <data name="Priest" xml:space="preserve">
+    <value>사제</value>
+  </data>
+  <data name="Shaman" xml:space="preserve">
+    <value>주술사</value>
+  </data>
+  <data name="Rogue" xml:space="preserve">
+    <value>도적</value>
+  </data>
+  <data name="Warlock" xml:space="preserve">
+    <value>흑마법사</value>
+  </data>
+  <data name="Warrior" xml:space="preserve">
+    <value>전사</value>
+  </data>
+  <data name="DeckCharts_Tooltip_NoReplayData" xml:space="preserve">
+    <value>사용가능한 리플레이 데이터가 없습니다.</value>
+  </data>
+  <data name="DeckCharts_Label_NoSelectedDeck" xml:space="preserve">
+    <value>Select a deck to see your recent games!</value>
+  </data>
+  <data name="Options_Tracker_General_CheckBox_MyGames" xml:space="preserve">
+    <value>Show my games panel</value>
   </data>
 </root>
